front-end/src/components/StoryItem/StoryItem.css
.drag-drop-item-enable-drag-drop .story-item {
	animation: wiggle-large infinite 0.5s linear;
}

.drag-drop-item-enable-drag-drop:nth-child(even) .story-item {
	animation-delay: 0.1s;
}

.story-item-placeholder {
	position: relative;
	display: inline-block;
	border-radius: inherit;

	--storyitem-height: 390px;
	width: calc(((var(--storyitem-height) / 3) * 2) + 20px);
	height: var(--storyitem-height);

	background: var(--colour-grey-two);
	cursor: pointer;
	transition: background 0.3s;
	animation: story-item-placeholder 1s infinite;
}

@keyframes story-item-placeholder {
	0% {
		background: var(--colour-grey-one);
	}
	10%,
	55% {
		background: var(--colour-grey-two);
	}
	88%,
	100% {
		background: var(--colour-grey-one);
	}
}

.story-item-loading {
	display: none;
}

.story-item {
	position: relative;
	display: inline-block;
	border-radius: 5px;

	--storyitem-height: 320px;
	width: calc(((var(--storyitem-height) / 3) * 2) + 20px);
	height: var(--storyitem-height);

	background: var(--colour-grey-three);
	cursor: pointer;
	transition: background 0.3s;
}

.story-item-container:hover .story-item {
	background: var(--colour-grey-four);
}

.story-item-size-l {
	border-radius: 5px;
	--storyitem-height: 390px;
}

.story-item-size-s {
	border-radius: 3px;
	--storyitem-height: 220px;
}

.story-item-spine {
	display: inline-block;
	border: 3px solid var(--colour-grey-one);
	border-width: 0 2px 0 0;
	width: 20px;
	height: 100%;
	vertical-align: middle;
}

.story-item-size-l .story-item-spine {
	width: 20px;
}

.story-item-size-s .story-item-spine {
	width: 10px;
}

.story-item-content {
	position: relative;
	display: inline-block;
	border-radius: inherit;
	width: calc(100% - 28px);
	height: 100%;
	vertical-align: middle;
}

.story-item-size-l .story-item-content {
	width: calc(100% - 28px);
}

.story-item-size-s .story-item-content {
	width: calc(100% - 12px);
}

.story-item-title {
	position: absolute;
	left: 50%;
	top: 70px;
	transform: translateX(-50%);
	margin: 0 auto;
	width: calc(100% - 24px);
	font-size: 30px;
	font-weight: 600;
	text-align: center;

	font-size: 26px;
	font-family: "Palatino Linotype", sans-serif;
	text-transform: uppercase;
	letter-spacing: 3px;
	word-spacing: 1px;
}

.story-item-size-l .story-item-title {
	top: 78px;
	font-size: 32px;
}

.story-item-size-s .story-item-title {
	top: 55px;
	font-size: 18px;
}

.story-item-owner {
	position: absolute;
	left: 50%;
	bottom: 24px;
	transform: translateX(-50%);
	margin: 0 auto;

	width: calc(100% - 24px);

	text-align: center;
	font-size: 14px;
	font-weight: 600;
}

.story-item-size-l .story-item-owner {
	font-size: 16px;
}

.story-item-size-s .story-item-owner {
	font-size: 13px;
}

.story-item-owner-label {
	position: absolute;
	left: 50%;
	bottom: -30px;
	transform: translateX(-50%);
	padding: 4px 8px;
	border-radius: 4px;

	background: var(--colour-grey-four);
	font-weight: 500;
	font-size: 14px;
	opacity: 0;
	transition: 0.2s;
}

.story-item-owner:hover .story-item-owner-label {
	opacity: 1;
}

.story-item-size-l .story-item-owner-label {
	bottom: -32px;
	font-size: 16px;
}

.story-item-size-s .story-item-owner-label {
	bottom: -26px;
	font-size: 12px;
}

.story-item-private {
	position: absolute;
	top: 6px;
	right: 6px;
	font-size: 14px;
}

@media (max-width: 750px) {
	.story-item {
		--storyitem-height: 275px;
	}

	.story-item-size-l {
		--storyitem-height: 300px;
	}

	.story-item-size-s {
		--storyitem-height: 200px;
	}

	.story-item-title {
		top: 24%;
		font-size: 20px;
	}

	.story-item-size-l .story-item-title {
		top: 22%;
		font-size: 5vw;
	}

	.story-item-size-s .story-item-title {
		top: 23%;
		font-size: 3.5vw;
	}

	.story-item-owner {
		font-size: 14px;
	}

	.story-item-owner-label {
		font-size: 13px;
	}
}

@media (max-width: 484px) {
	.story-item {
		width: calc(50vw - 22px);
		height: calc((((50vw - 22px) * 3) / 2) - 30px);
	}

	.story-item-size-l {
		width: calc(50vw - 22px);
		height: calc((((50vw - 22px) * 3) / 2) - 30px);
	}

	.story-item-size-s {
		--storyitem-height: calc(100vw / 2.3);
		width: calc(((var(--storyitem-height) / 3) * 2) + 20px);
		height: var(--storyitem-height);
	}

	.story-item-title {
		top: 27%;
		font-size: 4.5vw;
	}

	.story-item-size-l .story-item-title {
		top: 27%;
		font-size: 4.5vw;
	}

	.story-item-size-s .story-item-title {
		top: 23%;
		font-size: 3.5vw;
	}

	.story-item-owner {
		font-size: 13px;
		bottom: 12px;
	}

	.story-item-size-l .story-item-owner {
		font-size: 13px;
		bottom: 12px;
	}

	.story-item-size-s .story-item-owner {
		font-size: 12px;
		bottom: 8px;
	}

	.story-item-owner-label {
		font-size: 12px;
	}
}

